--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1648,6 +1648,11 @@ select {
   background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
@@ -1707,9 +1712,9 @@ select {
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-200:hover {
+.hover\:bg-gray-900:hover {
   --tw-bg-opacity: 1;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+  background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 
 .focus\:bg-white:focus {
@@ -1732,11 +1737,6 @@ select {
   background-color: rgba(3, 105, 161, var(--tw-bg-opacity));
 }
 
-.active\:bg-teal-600:active {
-  --tw-bg-opacity: 1;
-  background-color: rgba(4, 116, 129, var(--tw-bg-opacity));
-}
-
 .active\:bg-red-600:active {
   --tw-bg-opacity: 1;
   background-color: rgba(224, 36, 36, var(--tw-bg-opacity));
@@ -1745,6 +1745,11 @@ select {
 .active\:bg-blueGray-600:active {
   --tw-bg-opacity: 1;
   background-color: rgba(71, 85, 105, var(--tw-bg-opacity));
+}
+
+.active\:bg-blueGray-800:active {
+  --tw-bg-opacity: 1;
+  background-color: rgba(30, 41, 59, var(--tw-bg-opacity));
 }
 
 .bg-none {
@@ -2887,10 +2892,6 @@ select {
   object-fit: scale-down;
 }
 
-.object-center {
-  object-position: center;
-}
-
 .opacity-0 {
   opacity: 0;
 }
@@ -3436,6 +3437,11 @@ select {
 .focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(229, 231, 235, var(--tw-ring-opacity));
+}
+
+.focus\:ring-gray-300:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgba(209, 213, 219, var(--tw-ring-opacity));
 }
 
 .focus\:ring-gray-500:focus {
@@ -4136,10 +4142,6 @@ select {
     margin-top: 0px;
   }
 
-  .sm\:ml-1 {
-    margin-left: 0.25rem;
-  }
-
   .sm\:mr-2 {
     margin-right: 0.5rem;
   }
@@ -4256,6 +4258,10 @@ select {
 
   .md\:pl-16 {
     padding-left: 4rem;
+  }
+
+  .md\:pt-20 {
+    padding-top: 5rem;
   }
 
   .md\:pt-32 {
