--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1372,6 +1372,60 @@ select {
   }
 }
 
+.aspect-w-1,
+.aspect-w-2,
+.aspect-w-16 {
+  position: relative;
+  padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
+}
+
+.aspect-w-1 > *,
+.aspect-w-2 > *,
+.aspect-w-16 > * {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.aspect-none {
+  position: static;
+  padding-bottom: 0;
+}
+
+.aspect-none > * {
+  position: static;
+  height: auto;
+  width: auto;
+  top: auto;
+  right: auto;
+  bottom: auto;
+  left: auto;
+}
+
+.aspect-w-1 {
+  --tw-aspect-w: 1;
+}
+
+.aspect-w-2 {
+  --tw-aspect-w: 2;
+}
+
+.aspect-w-16 {
+  --tw-aspect-w: 16;
+}
+
+.aspect-h-2 {
+  --tw-aspect-h: 2;
+}
+
+.aspect-h-9 {
+  --tw-aspect-h: 9;
+}
+
 .container {
   width: 100%;
 }
@@ -1945,11 +1999,6 @@ select {
   border-bottom-left-radius: 0.5rem;
 }
 
-.rounded-t-xl {
-  border-top-left-radius: 0.75rem;
-  border-top-right-radius: 0.75rem;
-}
-
 .rounded-tl {
   border-top-left-radius: 0.25rem;
 }
@@ -2004,10 +2053,6 @@ select {
 
 .border-r-0 {
   border-right-width: 0px;
-}
-
-.border-b-0 {
-  border-bottom-width: 0px;
 }
 
 .border-l-0 {
@@ -2595,10 +2640,6 @@ select {
 
 .list-none {
   list-style-type: none;
-}
-
-.list-disc {
-  list-style-type: disc;
 }
 
 .m-0 {
@@ -3204,10 +3245,6 @@ select {
 
 .pl-4 {
   padding-left: 1rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
 }
 
 .pt-6 {
@@ -3874,10 +3911,6 @@ select {
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-6 {
-  width: 1.5rem;
 }
 
 .w-8 {
