--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1593,11 +1593,6 @@ select {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
-.bg-pink-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(231, 70, 148, var(--tw-bg-opacity));
-}
-
 .bg-purple-200 {
   --tw-bg-opacity: 1;
   background-color: rgba(220, 215, 254, var(--tw-bg-opacity));
@@ -1643,11 +1638,6 @@ select {
   background-color: rgba(14, 165, 233, var(--tw-bg-opacity));
 }
 
-.bg-lightBlue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(2, 132, 199, var(--tw-bg-opacity));
-}
-
 .bg-teal-200 {
   --tw-bg-opacity: 1;
   background-color: rgba(175, 236, 239, var(--tw-bg-opacity));
@@ -1691,11 +1681,6 @@ select {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(240, 82, 82, var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(224, 36, 36, var(--tw-bg-opacity));
 }
 
 .bg-gray-50 {
@@ -2543,10 +2528,6 @@ select {
   height: 350px;
 }
 
-.h-500-px {
-  height: 500px;
-}
-
 .h-600-px {
   height: 600px;
 }
@@ -2618,10 +2599,6 @@ select {
   line-height: 1;
 }
 
-.leading-snug {
-  line-height: 1.375;
-}
-
 .leading-normal {
   line-height: 1.5;
 }
@@ -2672,10 +2649,6 @@ select {
 
 .m-16 {
   margin: 4rem;
-}
-
-.-m-16 {
-  margin: -4rem;
 }
 
 .-m-24 {
@@ -2820,28 +2793,12 @@ select {
   margin-bottom: 2rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
 }
 
 .mb-24 {
@@ -2876,20 +2833,12 @@ select {
   margin-top: -5rem;
 }
 
-.-ml-20 {
-  margin-left: -5rem;
-}
-
 .-mt-24 {
   margin-top: -6rem;
 }
 
 .-mt-48 {
   margin-top: -12rem;
-}
-
-.-mt-64 {
-  margin-top: -16rem;
 }
 
 .max-w-sm {
@@ -2914,10 +2863,6 @@ select {
 
 .max-w-120-px {
   max-width: 120px;
-}
-
-.max-w-150-px {
-  max-width: 150px;
 }
 
 .min-h-screen {
@@ -3184,11 +3129,6 @@ select {
   padding-bottom: 3rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -3249,10 +3189,6 @@ select {
 
 .pt-6 {
   padding-top: 1.5rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
 }
 
 .pt-12 {
@@ -3681,16 +3617,6 @@ select {
   color: rgba(100, 116, 139, var(--tw-text-opacity));
 }
 
-.hover\:text-blueGray-700:hover {
-  --tw-text-opacity: 1;
-  color: rgba(51, 65, 85, var(--tw-text-opacity));
-}
-
-.hover\:text-blueGray-800:hover {
-  --tw-text-opacity: 1;
-  color: rgba(30, 41, 59, var(--tw-text-opacity));
-}
-
 .focus\:text-gray-700:focus {
   --tw-text-opacity: 1;
   color: rgba(55, 65, 81, var(--tw-text-opacity));
@@ -3809,10 +3735,6 @@ select {
   letter-spacing: -0.025em;
 }
 
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
-
 .select-none {
   -webkit-user-select: none;
       -ms-user-select: none;
@@ -3911,10 +3833,6 @@ select {
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .w-10 {
@@ -4216,10 +4134,6 @@ select {
     margin-top: 0px;
   }
 
-  .sm\:mr-2 {
-    margin-right: 0.5rem;
-  }
-
   .sm\:p-6 {
     padding: 1.5rem;
   }
@@ -4272,10 +4186,6 @@ select {
 
   .md\:justify-start {
     justify-content: flex-start;
-  }
-
-  .md\:justify-end {
-    justify-content: flex-end;
   }
 
   .md\:justify-between {
@@ -4387,10 +4297,6 @@ select {
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
-  .md\:text-left {
-    text-align: left;
-  }
-
   .md\:w-64 {
     width: 16rem;
   }
@@ -4409,10 +4315,6 @@ select {
 
   .md\:w-6\/12 {
     width: 50%;
-  }
-
-  .md\:w-8\/12 {
-    width: 66.666667%;
   }
 
   .md\:grid-cols-2 {
@@ -4453,28 +4355,12 @@ select {
     flex-direction: row;
   }
 
-  .lg\:self-center {
-    align-self: center;
-  }
-
   .lg\:justify-start {
     justify-content: flex-start;
   }
 
   .lg\:flex-grow {
     flex-grow: 1;
-  }
-
-  .lg\:order-1 {
-    order: 1;
-  }
-
-  .lg\:order-2 {
-    order: 2;
-  }
-
-  .lg\:order-3 {
-    order: 3;
   }
 
   .lg\:my-8 {
@@ -4486,16 +4372,12 @@ select {
     margin-bottom: 0px;
   }
 
-  .lg\:mr-4 {
-    margin-right: 1rem;
-  }
-
   .lg\:ml-auto {
     margin-left: auto;
   }
 
-  .lg\:-ml-16 {
-    margin-left: -4rem;
+  .lg\:-mb-5 {
+    margin-bottom: -1.25rem;
   }
 
   .lg\:-mt-64 {
@@ -4534,16 +4416,8 @@ select {
     padding-top: 0px;
   }
 
-  .lg\:pt-4 {
-    padding-top: 1rem;
-  }
-
   .lg\:pt-12 {
     padding-top: 3rem;
-  }
-
-  .lg\:pt-24 {
-    padding-top: 6rem;
   }
 
   .lg\:pl-24 {
@@ -4561,10 +4435,6 @@ select {
   .lg\:shadow-none {
     --tw-shadow: 0 0 #0000;
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .lg\:text-right {
-    text-align: right;
   }
 
   .lg\:text-white {
@@ -4600,10 +4470,6 @@ select {
 
   .lg\:w-8\/12 {
     width: 66.666667%;
-  }
-
-  .lg\:w-9\/12 {
-    width: 75%;
   }
 
   .lg\:w-full {
