--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1628,11 +1628,6 @@ select {
   background-color: rgba(186, 230, 253, var(--tw-bg-opacity));
 }
 
-.bg-lightBlue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(56, 189, 248, var(--tw-bg-opacity));
-}
-
 .bg-lightBlue-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(14, 165, 233, var(--tw-bg-opacity));
@@ -1653,11 +1648,6 @@ select {
   background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
 
-.bg-emerald-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
-}
-
 .bg-emerald-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
@@ -1671,11 +1661,6 @@ select {
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgba(251, 213, 213, var(--tw-bg-opacity));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(249, 128, 128, var(--tw-bg-opacity));
 }
 
 .bg-red-500 {
@@ -2805,10 +2790,6 @@ select {
   margin-bottom: 6rem;
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
 .mr-auto {
   margin-right: auto;
 }
@@ -3201,10 +3182,6 @@ select {
 
 .pt-16 {
   padding-top: 4rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
 }
 
 .pb-20 {
@@ -4208,6 +4185,14 @@ select {
 
   .md\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .md\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
+  .md\:mt-32 {
+    margin-top: 8rem;
   }
 
   .md\:ml-64 {
