--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1130,12 +1130,19 @@ select {
 
 /* custom css classes example. Here we write custom css classes */
 
-.red-btn {
-  background-color:#FF0000;
+center-btn{
+  height:20px;
+  width:100px;
+  margin: -20px -50px;
+  position:relative;
+  top:50%;
+  left:50%;
 }
 
-.green-btn {
-  background-color:#00FF00;
+#div-center-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pointer-events-none {
@@ -1304,10 +1311,6 @@ select {
   margin-top: 0px;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
 .-mt-20 {
   margin-top: -5rem;
 }
@@ -1334,6 +1337,10 @@ select {
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mr-1 {
@@ -1394,6 +1401,18 @@ select {
 
 .-ml-4 {
   margin-left: -1rem;
+}
+
+.-mt-1\.5 {
+  margin-top: -0.375rem;
+}
+
+.-mt-1 {
+  margin-top: -0.25rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .mr-0 {
@@ -1658,6 +1677,10 @@ select {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-items-center {
+  justify-items: center;
 }
 
 .gap-6 {
