--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1348,12 +1348,8 @@ select {
   margin-bottom: 2.5rem;
 }
 
-.-mt-14 {
-  margin-top: -3.5rem;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .mr-2 {
@@ -1404,8 +1400,8 @@ select {
   margin-top: -0.25rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .mr-0 {
@@ -1472,6 +1468,10 @@ select {
   height: 1rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .h-48 {
   height: 12rem;
 }
@@ -1500,6 +1500,10 @@ select {
   height: auto;
 }
 
+.max-h-72 {
+  max-height: 18rem;
+}
+
 .min-h-screen-75 {
   min-height: 75vh;
 }
@@ -1526,10 +1530,6 @@ select {
 
 .w-4 {
   width: 1rem;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
 }
 
 .w-96 {
@@ -1726,6 +1726,10 @@ select {
   border-radius: 0.5rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -1850,6 +1854,11 @@ select {
 .bg-indigo-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(88 80 236 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
 .bg-red-500 {
@@ -2050,6 +2059,16 @@ select {
   padding-right: 0px;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -2104,6 +2123,10 @@ select {
 
 .pt-1 {
   padding-top: 0.25rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
 }
 
 .text-left {
@@ -2296,6 +2319,11 @@ select {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-blueGray-100 {
   --tw-text-opacity: 1;
   color: rgb(241 245 249 / var(--tw-text-opacity));
@@ -2314,11 +2342,6 @@ select {
 .text-teal-500 {
   --tw-text-opacity: 1;
   color: rgb(6 148 162 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-lightBlue-500 {
@@ -2502,6 +2525,10 @@ select {
   outline-offset: 2px;
 }
 
+.focus\:outline-0:focus {
+  outline-width: 0px;
+}
+
 .focus\:ring-4:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2663,6 +2690,10 @@ select {
 }
 
 @media (min-width: 768px) {
+  .md\:max-height-450{
+    max-height: 450px;
+  }
+
   .md\:fixed {
     position: fixed;
   }
@@ -2695,12 +2726,20 @@ select {
     margin-bottom: 0px;
   }
 
+  .md\:-mt-5 {
+    margin-top: -1.25rem;
+  }
+
   .md\:ml-5 {
     margin-left: 1.25rem;
   }
 
   .md\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .md\:mt-7 {
+    margin-top: 1.75rem;
   }
 
   .md\:block {
@@ -2713,6 +2752,16 @@ select {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:max-h-fit {
+    max-height: -webkit-fit-content;
+    max-height: -moz-fit-content;
+    max-height: fit-content;
   }
 
   .md\:min-h-full {
@@ -2800,9 +2849,44 @@ select {
     padding-bottom: 6rem;
   }
 
+  .md\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .md\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .md\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .md\:pr-12 {
@@ -2823,6 +2907,10 @@ select {
 
   .md\:pb-2 {
     padding-bottom: 0.5rem;
+  }
+
+  .md\:pb-32 {
+    padding-bottom: 8rem;
   }
 
   .md\:text-3xl {
