--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -2126,6 +2126,18 @@ select {
   padding-top: 0.25rem;
 }
 
+.pb-28 {
+  padding-bottom: 7rem;
+}
+
+.pt-14 {
+  padding-top: 3.5rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2751,6 +2763,10 @@ select {
     margin-top: 2.5rem;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -2903,6 +2919,10 @@ select {
 
   .md\:pb-2 {
     padding-bottom: 0.5rem;
+  }
+
+  .md\:pt-16 {
+    padding-top: 4rem;
   }
 
   .md\:text-3xl {
