--- a/styles/index.css
+++ b/styles/index.css
@@ -20,5 +20,11 @@
     .images-width{
       width:38rem;
     }
-    
+    .min-h-screen {
+      min-height: 100vh;
+    }
+    .py-40 {
+      padding-top: 10rem;
+      padding-bottom: 10rem;
+    }
   }
