--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3005,6 +3005,10 @@ select {
     max-width: 36rem;
   }
 
+  .md\:cursor-pointer {
+    cursor: pointer;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
