--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -2318,6 +2318,10 @@ select {
   padding-top: 0.25rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -3134,6 +3138,10 @@ select {
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .md\:hover\:opacity-50:hover {
+    opacity: 0.5;
   }
 }
 
