--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1313,6 +1313,14 @@ select {
   z-index: 40;
 }
 
+.order-2 {
+  order: 2;
+}
+
+.order-1 {
+  order: 1;
+}
+
 .float-right {
   float: right;
 }
@@ -1685,14 +1693,6 @@ select {
 
 .w-6\/12 {
   width: 50%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
 }
 
 .min-w-0 {
@@ -2188,11 +2188,6 @@ select {
   padding-right: 2rem;
 }
 
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -2223,19 +2218,29 @@ select {
   padding-bottom: 5rem;
 }
 
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-3\.5 {
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
 }
 
 .py-40 {
   padding-top: 10rem;
   padding-bottom: 10rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-6 {
@@ -2266,10 +2271,6 @@ select {
   padding-bottom: 8rem;
 }
 
-.pr-12 {
-  padding-right: 3rem;
-}
-
 .pb-20 {
   padding-bottom: 5rem;
 }
@@ -2288,6 +2289,10 @@ select {
 
 .pt-20 {
   padding-top: 5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .pr-4 {
@@ -2316,10 +2321,6 @@ select {
 
 .pt-1 {
   padding-top: 0.25rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
 }
 
 .text-left {
@@ -2421,12 +2422,12 @@ select {
   text-transform: capitalize;
 }
 
-.leading-normal {
-  line-height: 1.5;
-}
-
 .leading-relaxed {
   line-height: 1.625;
+}
+
+.leading-normal {
+  line-height: 1.5;
 }
 
 .leading-none {
@@ -2681,10 +2682,6 @@ select {
           text-decoration-line: underline;
 }
 
-.hover\:opacity-50:hover {
-  opacity: 0.5;
-}
-
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2877,8 +2874,24 @@ select {
 }
 
 @media (min-width: 768px) {
+  .tooltip.md\:invisible > .tooltip-arrow:before {
+    visibility: hidden;
+  }
+
+  [role="tooltip"].md\:invisible > [data-popper-arrow]:before {
+    visibility: hidden;
+  }
+
+  [role="tooltip"].md\:invisible > [data-popper-arrow]:after {
+    visibility: hidden;
+  }
+
   .md\:max-height-450{
     max-height: 450px;
+  }
+
+  .md\:invisible {
+    visibility: hidden;
   }
 
   .md\:fixed {
@@ -2909,20 +2922,24 @@ select {
     margin-top: 2.5rem;
   }
 
+  .md\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
   .md\:mb-5 {
     margin-bottom: 1.25rem;
   }
 
-  .md\:mt-5 {
-    margin-top: 1.25rem;
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:-mt-10 {
     margin-top: -2.5rem;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
+  .md\:mt-2 {
+    margin-top: 0.5rem;
   }
 
   .md\:mt-32 {
@@ -2935,6 +2952,10 @@ select {
 
   .md\:-mt-5 {
     margin-top: -1.25rem;
+  }
+
+  .md\:mt-20 {
+    margin-top: 5rem;
   }
 
   .md\:ml-64 {
@@ -2973,6 +2994,10 @@ select {
     min-height: 100%;
   }
 
+  .md\:w-4\/6 {
+    width: 66.666667%;
+  }
+
   .md\:w-6\/12 {
     width: 50%;
   }
@@ -2995,10 +3020,6 @@ select {
 
   .md\:w-64 {
     width: 16rem;
-  }
-
-  .md\:w-4\/6 {
-    width: 66.666667%;
   }
 
   .md\:min-w-full {
@@ -3086,11 +3107,6 @@ select {
     padding-right: 1.25rem;
   }
 
-  .md\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
   .md\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
@@ -3118,6 +3134,10 @@ select {
 
   .md\:pb-2 {
     padding-bottom: 0.5rem;
+  }
+
+  .md\:text-center {
+    text-align: center;
   }
 
   .md\:text-3xl {
